# misc

./: .gitignore  FrozenLake.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  a.out  add.cpp  add.cu  astroselect.py  babylonian.py  click.py  coyote.ipynb  distributed.py  fac  fac.hi  fac.hs  fourier.py  generativelogo.ipynb  graph.dot  langevin.ipynb  locnb.py  mom.py  physics-nn.ipynb  projectile.py  rsa.py  sampling.ipynb  sop.md  test  test.c  test.hpp  test.jl  test.py  test.stan  test2.cpp  test2.hpp  test2_bindings.rs  testdat.json  testing.qgz  testmanim.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  atlas-munari-checkpoint.ipynb  coyote-checkpoint.ipynb  generativelogo-checkpoint.ipynb  langevin-checkpoint.ipynb
.vim/: coc-settings.json
click/: Cargo.toml  click.py
hk/: utils.hs
islands/: Manifest.toml  Project.toml  Untitled.ipynb  islands  islands.hpp  islands.jl  islands.stan
learnqgis/: Land.gpkg  islands.qgz
manim/: start.py
mediumstats/: getstats.py  pyproject.toml  run.sh  stats.txt
programs/: Untitled.ipynb  audio.py  bench_swap.rs  camvid.py  dbscan.py  enc_chat.py  euclidean.py  galaxymass.py  gaussianradius.py  inception.py  itcols.py  linregvis.py  net.py  plotplane.py  plotsphere.py  rrt.py  scatter.py  technicalindicators.ipynb  test.jl  vidcolring.py  virialexp.py
programs/simd/: Cargo.toml
programs/simd/benches/: bench_add.rs
programs/simd/src/: main.rs
rnn/: Untitled.ipynb  quandl-Copy1.ipynb  quandl.ipynb  ts2.ipynb  ts3.ipynb
spatial/: .Rhistory  nyc_bym2.R
statsim/: 6217.py  amc201912a20.py  (+15 more)
(+30 files in other folders)
