[tool.poetry]
name = "mediumstats"
version = "0.1.0"
description = ""
authors = ["Jeff Shen <jshen2014@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
